--- a/popup/info.html
+++ b/popup/info.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 <h3>GoodTwitter</h3>
-<p>If the add-on stops working for you, go <a href="https://github.com/ZusorCode/GoodTwitterChrome/blob/master/troubleshooting.md" target="_blank">here</a> for troubleshooting.</p>
-<p>If you have an issue that is not mentioned report it <a href="https://github.com/ZusorCode/GoodTwitterChrome/issues" target="_blank">here</a>.</p>
-<p>GoodTwitter is <a href="https://github.com/ZusorCode/GoodTwitterChrome" target="_blank">open-source</a>. Pull requests and contributions are appreciated.</p>
-<p>Coded by <a href="https://twitter.com/ZusorOW" target="_blank">Zusor.</a></p>
+<p>If the add-on stops working for you, go <a href="https://github.com/egfx/Gr8TwitterChrome/blob/master/troubleshooting.md" target="_blank">here</a> for troubleshooting.</p>
+<p>If you have an issue that is not mentioned report it <a href="https://github.com/egfx/Gr8TwitterChrome/issues" target="_blank">here</a>.</p>
+<p>Gr8Twitter is <a href="https://github.com/egfx/Gr8TwitterChrome/" target="_blank">open-source</a>. Pull requests and contributions are appreciated.</p>
+<p>Coded by <a href="https://twitter.com/chamILYAn" target="_blank">egfx.</a></p>
 </body>
 </html>
