--- a/popup/info.html
+++ b/popup/info.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="milligram.css" />
-    <link rel="stylesheet" href="GoodTwitter.css" />
+    <link rel="stylesheet" href="Gr8Twitter.css" />
 </head>
 <body>
 <h3>GoodTwitter</h3>
