--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="https://qkast.com/static/libs/css/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/gmdhfohiimofdkgfibdamlamdbehooba">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <meta name="google-site-verification" content="KWy-v12-9BszUosEp8oQ76OEN-dEgzyJ7oQXVRA9A28" />
   <style type="text/css">
     @font-face{font-family:'Open Sans';font-style:normal;font-weight:400;src:local('Open Sans Regular'),url(//brick.a.ssl.fastly.net/fonts/opensans/400.woff) format('woff')}
-
+  </style>
 /* Space out content a bit */
 body {
   padding-top: 20px;
