--- a/index.html
+++ b/index.html
@@ -1462,8 +1462,8 @@ window.open('https://chrome.google.com/webstore/detail/gmdhfohiimofdkgfibdamlamd
 
                     <!-- Inlet Demo
                     <div style="border:dotted;border-color:greenyellow;border-radius:12px;padding-top:15px;padding-bottom:15px;margin-bottom:15px;background:#E0FFFF;" class="inlet"></div> -->
-                  <div class="col-xs-6">
-                    <div class="col-lg-6">
+
+                    <div class="col-md-6">
                       <h4>Share to Facebook</h4>
                      <p>Share your own tweet or any tweet. Every tweet is shareable.</p> 
 
@@ -1473,9 +1473,8 @@ window.open('https://chrome.google.com/webstore/detail/gmdhfohiimofdkgfibdamlamd
                       <h4>Share from anywhere</h4>
                       <p>Each tweet is shareable by anyone using any Twitter client. Mobile or Desktop.</p>
                     </div>
-                  </div>
-                  <div class="col-xs-6">
-                     <div class="col-lg-6">
+
+                     <div class="col-md-6">
                       <h4>Smart and intuitive</h4>
                       <p>2FB integrates into the Twitter UI and let's you share & react to tweets just like a comment.</p>
 
@@ -1485,7 +1484,6 @@ window.open('https://chrome.google.com/webstore/detail/gmdhfohiimofdkgfibdamlamd
                       <h4>Expand your reach</h4>
                       <p>Expand your social media reach. ReTweet to Facebook and contribute.</p>
                     </div>
-                  </div>
     </div>
       <!-- Footer -->
       <div class="footer">
