--- a/index.html
+++ b/index.html
@@ -1476,7 +1476,7 @@ window.open('https://chrome.google.com/webstore/detail/gmdhfohiimofdkgfibdamlamd
 
                      <div class="col-md-6">
                       <h4>Smart and intuitive</h4>
-                      <p>2FB integrates into the Twitter UI and let's you share & react to tweets just like a comment.</p>
+                      <p>Share & react to tweets just like a comment.</p>
 
                       <h4>Share rich reactions</h4>
                       <p>Facebook emote on Twitter. Use Like, Love, Haha, Wow, Sad, Angry.</p>
