--- a/index.html
+++ b/index.html
@@ -1481,13 +1481,13 @@ window.open('https://chrome.google.com/webstore/detail/gmdhfohiimofdkgfibdamlamd
                     </div>
 
                      <div class="col-md-6">
-                      <h4>Smart and intuitive</h4>
+                      <h4 style="font-weight:600">Smart and intuitive</h4>
                       <p>Share & react to tweets just like a comment.</p>
 
                       <h4>Share rich reactions</h4>
                       <p>Facebook emote on Twitter. Use Like, Love, Haha, Wow, Sad, Angry.</p>
 
-                      <h4>Expand your reach</h4>
+                      <h4 style="font-weight:600">Expand your reach</h4>
                       <p>Expand your social media reach. ReTweet to Facebook and contribute.</p>
                     </div>
     </div>
