--- a/index.html
+++ b/index.html
@@ -1470,24 +1470,24 @@ window.open('https://chrome.google.com/webstore/detail/gmdhfohiimofdkgfibdamlamd
                     <div style="border:dotted;border-color:greenyellow;border-radius:12px;padding-top:15px;padding-bottom:15px;margin-bottom:15px;background:#E0FFFF;" class="inlet"></div> -->
 
                     <div class="col-md-6">
-                      <h4>Share to Facebook</h4>
+                      <h4 style="font-weight:600">Share to Facebook</h4>
                      <p>Share your own tweet or any tweet. Every tweet is shareable.</p> 
 
-                      <h4 style="font-weight:600">Completely automatic</h4>
+                      <h4>Completely automatic</h4>
                       <p id="mainpoint">This Chrome extension works completley in the background with Twitter.</p>
 
-                      <h4>Share from anywhere</h4>
+                      <h4 style="font-weight:600">Share from anywhere</h4>
                       <p>Each tweet is shareable by anyone using any Twitter client. Mobile or Desktop.</p>
                     </div>
 
                      <div class="col-md-6">
-                      <h4 style="font-weight:600">Smart and intuitive</h4>
+                      <h4>Smart and intuitive</h4>
                       <p>Share & react to tweets just like a comment.</p>
 
-                      <h4>Share rich reactions</h4>
+                      <h4 style="font-weight:600">Share rich reactions</h4>
                       <p>Facebook emote on Twitter. Use Like, Love, Haha, Wow, Sad, Angry.</p>
 
-                      <h4 style="font-weight:600">Expand your reach</h4>
+                      <h4>Expand your reach</h4>
                       <p>Expand your social media reach. ReTweet to Facebook and contribute.</p>
                     </div>
     </div>
